# lqr

my_lqr/: CMakeLists.txt  package.xml
my_lqr/include/: car_info.h  my_marker.h
my_lqr/launch/: my_control.launch  my_gazebo.launch  my_rviz.launch
my_lqr/msg/: car_info.msg  my_marker.msg  way_point.msg  way_points.msg
my_lqr/rviz/: my_rviz.rviz
my_lqr/scripts/: car_controller.py  car_obj.py  lqr_debug.py  lqr_util.py  path_generate.py  path_process.py
my_lqr/src/: car_info_pub.cpp  visual_point.cpp
